--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "cloudinary": "^2.8.0",
+    "danfojs-node": "^1.2.0",
+    "express": "^5.1.0",
+    "fast-csv": "^5.0.5",
+    "fs": "^0.0.1-security",
+    "fuse.js": "^7.1.0",
+    "mongoose": "^9.0.0",
+    "multer": "^2.0.2"
+  }
 }
